  downloads similar to that provided (in most cases) for uploads.

  * CloudFront Service

- Fixed bug parsing that prevented AWS Account Numbers from 
  being parsed from XML responses into a DistributionConfig object.

COCKPIT

- Fixed bug that caused Cockpit to create buckets in the US Standard 
  location regardless of the location selected by the user.

-------------
Version 0.7.2
-------------

TOOLKIT

  * General

- Added support for private and streaming CloudFront distributions (see 
  the "CloudFront Service" section below)
- Changed default thread and connection count settings to improve 
  reliability when tranferring many large files and performance when 
  performing object administration tasks. Default property settings for 
  maximum simultaneous admin threads and HTTP connections are increased 
  from 10 to 20, while the default number of non-admin threads is reduced 
  from 4 to 2. 
- Improved compatibility with other S3 tools by setting the following
  properties to true by default: 
  "filecomparer.ignore-panic-dir-placeholders"
  "filecomparer.ignore-s3organizer-dir-placeholders"
- Added new property "filecomparer.ignore-s3organizer-dir-placeholders"
  which allows JetS3t to ignore directory place-holder objects created
  by the S3 Organizer Firefox extension when uploading or downloading
  files.
- Added a new property "filecomparer.md5-files-root-dir" which allows MD5 
  files generated for file comparison purposes to be stored in a custom 
  path, instead of within the same directory structure as data files.
- Added support for the property "filecomparer.skip-symlinks" which causes
  symlink/alias files to be ignored by JetS3t applications when deciding
  which files to send to S3. Although "soft" links can be detected and 
  ignored, hard links cannot be detected and will be treated as ordinary 
  files.
- Added support for the TargetGrants setting of logged S3 buckets. This